# caser

./: README.md
client/: Cargo.toml
client/src/: calendar.rs  client.rs  error.rs  event.rs  helpers.rs  lib.rs
common/: Cargo.toml
common/src/: calendar.rs  event.rs  lib.rs  span.rs
common/src/recurrence/: mod.rs  parser.rs  serde.rs
docs/: README.md
docs/server/: README.md
server/: Cargo.toml
server/src/: calendar.rs  database_helpers.rs  event.rs
server/src/authentication/: auth_guard.rs
server/src/recurrence/: mod.rs
server/src/routes/: routes_event.rs
