[package]
name = "client"
version = "0.1.0"
authors = ["Lucas Antunes <lucasba8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caser-common = { path = "../common" }
futures = '0.3.12'
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0.116", features = ["derive"] }
reqwest = { version = "0.11.1", features = ["json"] }
url = "2.2.1"
async-trait = "0.1.42"
serde_json = "1.0.57"
thiserror = "1.0.20"